text size and colour fixes, mobile media query left side gap fixed

--- a/collections.css
+++ b/collections.css
@@ -20,5 +20,6 @@
     { 0% {background-position: left;}
     100% {background-position: right;}}
     
-    h1{color: #f5e5d4;
-    padding-bottom:0em;}
+    h1{color: #1e1e1e;
+    padding-bottom:0em;
+font-size: 50px;}
